--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "test",
-  "version": "2.1.3",
-  "description": "",
+  "version": "2.1.4",
+  "type": "module",
+  "description": "For practising node js",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,6 +10,7 @@
   "author": "Hritik",
   "license": "ISC",
   "dependencies": {
+    "esm": "^3.2.25",
     "express": "^4.18.2",
     "joi": "^17.9.2"
   }
